--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 }
 
 header{
-    
+width :100%;
 }
 
 main{
@@ -26,3 +26,9 @@ main{
 footer{
 
 }
+/* git init
+git add README.md
+git commit -m "first commit"
+git branch -M main
+git remote add origin git@github.com:kozzztia/adaptive-lesson.git
+git push -u origin main */
