--- a/style.css
+++ b/style.css
@@ -11,9 +11,11 @@
     --transition: all .2s ease;
     --main-padding: 23px 10px;
 
-    &:has(#toggle-menu:checked){
+    &:has(#toggle-menu:checked) {
         --position-top: var(--tablet-mobile-header-height)
-    };
+    }
+
+    ;
 }
 
 
@@ -24,7 +26,12 @@
     margin: 0;
     box-sizing: border-box;
 }
-a, h1, h2, h3, h4{
+
+a,
+h1,
+h2,
+h3,
+h4 {
     user-select: none;
 }
 
@@ -32,7 +39,7 @@ a, h1, h2, h3, h4{
 body {
     font-family: var(--font-family);
     background: #fff;
-    color : #565656;
+    color: #565656;
 }
 
 
@@ -42,7 +49,7 @@ footer {
     width: 100%;
     margin: 0 auto;
     max-width: var(--desktop-width);
-    padding: var(--main-padding);
+
 }
 
 header {
@@ -54,8 +61,9 @@ header {
     justify-content: space-between;
     align-items: center;
     gap: 20px;
+    padding: var(--main-padding);
     height: var(--tablet-mobile-header-height);
-    background: #fff;
+    background: rgba(255, 255, 255, 0.8);
     z-index: 100;
 
     img {
@@ -113,14 +121,15 @@ ul {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap :5px;
+    gap: 5px;
     overflow: hidden;
+    background: rgba(255, 255, 255, 0.8);
 }
 
 a {
-    padding : 5px;
+    padding: 5px;
     font-size: 18px;
-    color : inherit;
+    color: inherit;
     background: transparent;
     text-decoration: none;
     position: relative;
@@ -128,7 +137,8 @@ a {
     transition: var(--transition);
     overflow: hidden;
     display: block;
-    &:after{
+
+    &:after {
         content: "";
         display: block;
         position: absolute;
@@ -140,9 +150,10 @@ a {
         transition: var(--transition);
     }
 
-    &:hover{
+    &:hover {
         color: #000;
-        &:after{
+
+        &:after {
             right: 0;
         }
     }
@@ -153,16 +164,99 @@ input[id="toggle-menu"]:checked~ul {
 }
 
 main {
-    position: relative;
-    height: 100vh;
+    position: inherit;
+    min-height: 100vh;
     z-index: auto;
-    top: var(--tablet-mobile-header-height);
+    margin-top: var(--tablet-mobile-header-height);
+
+    * {
+        width: 100%;
+    }
+
+    .banner {
+        background-image: url('assets/banner.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        height: 500px;
+        padding: var(--main-padding);
+
+        h2 {
+            margin-top: 40px;
+            font-family: Red Hat Display;
+            color: #000;
+            font-size: 30px;
+            font-weight: 600;
+            line-height: 50px;
+            letter-spacing: 0.05em;
+            text-align: left;
+        }
+    }
+
+    .blog {
+        padding: var(--main-padding); 
+        h1 {
+            font-family: Red Hat Display;
+            font-size: 48px;
+            font-weight: 400;
+            line-height: 64px;
+            letter-spacing: 0.05em;
+            text-align: left;
+            margin-bottom: 59px;
+
+        }
+        div{
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            margin-bottom: 50px;
+        }
+        h4{
+            font-family: Lato;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 26.56px;
+            letter-spacing: 0.1em;
+            text-align: left;
+            margin-bottom: 30px;
+            color :#7B7B7B;
+        }
+        h2{
+            font-family: Red Hat Display;
+            font-size: 23px;
+            font-weight: 500;
+            line-height: 38.18px;
+            letter-spacing: 0.1em;
+            text-align: left;
+            margin-bottom: 15px;   
+            color :#000000;         
+        }
+        h6{
+            font-family: Lato;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 26.56px;
+            letter-spacing: 0.1em;
+            text-align: left;
+            margin-bottom: 40px;
+            color: #7B7B7B;
+        }
+        h5{
+            font-family: Lato;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 26.56px;
+            letter-spacing: 0.05em;
+            text-align: left;  
+            color: #565656;
+        }
+    }
 }
 
 footer {
-    position: relative;
     height: var(--table-mobile-footer-height);
     z-index: auto;
+    border: 1px solid red;
 }
 
 
@@ -172,9 +266,23 @@ footer {
     :root {
         --main-padding: 20px 34px;
     }
-    header>ul{
-        right: 20px;
+
+    header>ul {
+        right: 0;
+
     }
+
+    main {
+        .banner {
+            height: 320px;
+
+            h1 {
+                margin-top: 0;
+                max-width: 70%;
+            }
+        }
+    }
+
 }
 
 @media screen and (min-width: 1440px) {
@@ -187,7 +295,7 @@ footer {
         display: none;
     }
 
-    header>ul{
+    header>ul {
         opacity: 1;
         position: relative;
         height: auto;
@@ -197,5 +305,17 @@ footer {
         transition: var(--transition);
         z-index: auto;
         flex-direction: row;
+    }
+
+    main {
+        .banner {
+            height: 600px;
+
+            h1 {
+                margin-top: 40px;
+                font-size: 48px;
+
+            }
+        }
     }
 }
