--- a/style.css
+++ b/style.css
@@ -10,9 +10,13 @@
     --position-top: calc(var(--tablet-mobile-header-height) * -1);
     --transition: all .2s ease;
     --main-padding: 23px 10px;
+    --post-icon-content: "View All";
 
     &:has(#toggle-menu:checked) {
         --position-top: var(--tablet-mobile-header-height)
+    }
+    &:has(#show-posts-toggle:checked){
+        --post-icon-content: "Hide";
     }
 
     ;
@@ -165,7 +169,7 @@ input[id="toggle-menu"]:checked~ul {
 
 main {
     position: inherit;
-    min-height: 100vh;
+    min-height: auto;
     z-index: auto;
     margin-top: var(--tablet-mobile-header-height);
 
@@ -194,7 +198,8 @@ main {
     }
 
     .blog {
-        padding: var(--main-padding); 
+        padding: var(--main-padding);
+
         h1 {
             font-family: Red Hat Display;
             font-size: 48px;
@@ -205,13 +210,15 @@ main {
             margin-bottom: 59px;
 
         }
-        div{
+
+        div {
             display: flex;
             flex-direction: column;
             gap: 20px;
             margin-bottom: 50px;
         }
-        h4{
+
+        h4 {
             font-family: Lato;
             font-size: 16px;
             font-weight: 400;
@@ -219,19 +226,21 @@ main {
             letter-spacing: 0.1em;
             text-align: left;
             margin-bottom: 30px;
-            color :#7B7B7B;
+            color: #7B7B7B;
         }
-        h2{
+
+        h2 {
             font-family: Red Hat Display;
             font-size: 23px;
             font-weight: 500;
             line-height: 38.18px;
             letter-spacing: 0.1em;
             text-align: left;
-            margin-bottom: 15px;   
-            color :#000000;         
+            margin-bottom: 15px;
+            color: #000000;
         }
-        h6{
+
+        h6 {
             font-family: Lato;
             font-size: 16px;
             font-weight: 400;
@@ -241,81 +250,198 @@ main {
             margin-bottom: 40px;
             color: #7B7B7B;
         }
-        h5{
+
+        h5 {
             font-family: Lato;
             font-size: 16px;
             font-weight: 400;
             line-height: 26.56px;
             letter-spacing: 0.05em;
-            text-align: left;  
+            text-align: left;
             color: #565656;
         }
     }
-}
 
-footer {
-    height: var(--table-mobile-footer-height);
-    z-index: auto;
-    border: 1px solid red;
-}
+    .posts {
+        padding: var(--main-padding);
+        display: flex;
+        flex-direction: column;
 
+        label {
+            cursor: pointer;
+            margin-bottom: 30px;
 
-
-
-@media screen and (min-width: 768px) {
-    :root {
-        --main-padding: 20px 34px;
-    }
-
-    header>ul {
-        right: 0;
-
-    }
-
-    main {
-        .banner {
-            height: 320px;
-
-            h1 {
-                margin-top: 0;
-                max-width: 70%;
+            input {
+                display: none;
             }
+
+            h2 {
+                font-family: Red Hat Display;
+                font-size: 28px;
+                font-weight: 600;
+                line-height: 46.48px;
+                letter-spacing: 0.1em;
+                text-align: left;
+                width: 100%;
+                color: #000;
+            }
+
+            i {
+                font-size: 40px;
+                user-select: none;
+            }
+
+            i:before {
+                content: var(--post-icon-content);
+                position: relative;
+                display: inline-block;
+                font-family: Lato;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 26.56px;
+                letter-spacing: 0.1em;
+                text-align: left;
+                margin-right: 20px;
+            }
+
+        }
+
+        div {
+            display: flex;
+            flex-direction: column-reverse;
+
+            span {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                margin-bottom: 25px;
+
+                h4 {
+                    font-family: Lato;
+                    font-size: 16px;
+                    font-weight: 400;
+                    line-height: 26.56px;
+                    letter-spacing: 0.1em;
+                    text-align: left;
+                }
+
+                h6 {
+                    font-family: Lato;
+                    font-size: 16px;
+                    font-weight: 400;
+                    line-height: 26.56px;
+                    letter-spacing: 0.1em;
+                    text-align: right;
+                }
+            }
+
+            h3 {
+                font-family: Red Hat Display;
+                font-size: 22px;
+                font-weight: 500;
+                line-height: 36.52px;
+                letter-spacing: 0.1em;
+                text-align: left;
+                color: #000;
+                margin-bottom: 20px;
+            }
+
+            h5 {
+                font-family: Lato;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 26.56px;
+                letter-spacing: 0.05em;
+                text-align: left;
+                margin-bottom: 50px;
+            }
+
+            figure {
+                margin-bottom: 50px;
+            }
+
+
         }
     }
 
-}
-
-@media screen and (min-width: 1440px) {
-    :root {
-        --main-padding: 40px 135px;
-        --tablet-mobile-header-height: 100px;
-    }
-
-    label[for="toggle-menu"] {
-        display: none;
-    }
-
-    header>ul {
-        opacity: 1;
-        position: relative;
-        height: auto;
-        margin-left: 30%;
-        right: 0;
-        top: 0;
-        transition: var(--transition);
+    footer {
+        height: var(--table-mobile-footer-height);
         z-index: auto;
-        flex-direction: row;
+        border: 1px solid red;
     }
 
-    main {
-        .banner {
-            height: 600px;
 
-            h1 {
-                margin-top: 40px;
-                font-size: 48px;
 
+
+    @media screen and (min-width: 768px) {
+        :root {
+            --main-padding: 20px 34px;
+        }
+
+        header>ul {
+            right: 0;
+
+        }
+
+        main {
+            .banner {
+                height: 320px;
+
+                h1 {
+                    margin-top: 0;
+                    max-width: 70%;
+                }
+            }
+
+            .blog {
+                div {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+
+                    &:nth-child(odd) {
+                        flex-direction: row-reverse;
+                    }
+                }
+            }
+
+            .posts {}
+        }
+
+    }
+
+    @media screen and (min-width: 1440px) {
+        :root {
+            --main-padding: 40px 135px;
+            --tablet-mobile-header-height: 100px;
+        }
+
+        label[for="toggle-menu"] {
+            display: none;
+        }
+
+        header>ul {
+            opacity: 1;
+            position: relative;
+            height: auto;
+            margin-left: 30%;
+            right: 0;
+            top: 0;
+            transition: var(--transition);
+            z-index: auto;
+            flex-direction: row;
+        }
+
+        main {
+            .banner {
+                height: 600px;
+
+                h1 {
+                    margin-top: 40px;
+                    font-size: 48px;
+
+                }
             }
         }
     }
-}
