--- a/style.css
+++ b/style.css
@@ -16,10 +16,12 @@
     &:has(#toggle-menu:checked) {
         --position-top: var(--tablet-mobile-header-height)
     }
-    &:has(#show-posts-toggle:checked){
+
+    &:has(#show-posts-toggle:checked) {
         --post-icon-content: "Hide";
         --post-display: flex;
     }
+
     ;
 }
 
@@ -111,63 +113,63 @@ header {
             padding-left: 10px;
         }
     }
-}
 
-/* burger */
-ul {
-    padding: 5px;
-    opacity: 0;
-    position: absolute;
-    height: auto;
-    list-style: none;
-    right: 0;
-    top: var(--position-top);
-    transition: var(--transition);
-    z-index: -1;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 5px;
-    overflow: hidden;
-    background: rgba(255, 255, 255, 0.8);
-}
-
-a {
-    padding: 5px;
-    font-size: 18px;
-    color: inherit;
-    background: transparent;
-    text-decoration: none;
-    position: relative;
-    cursor: pointer;
-    transition: var(--transition);
-    overflow: hidden;
-    display: block;
-
-    &:after {
-        content: "";
-        display: block;
+    ul {
+        padding: 5px;
+        opacity: 0;
         position: absolute;
-        right: -100px;
-        border: 0;
-        width: 100%;
-        height: 1px;
-        background: #000;
+        height: auto;
+        list-style: none;
+        right: 0;
+        top: var(--position-top);
         transition: var(--transition);
+        z-index: -1;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 5px;
+        overflow: hidden;
+        background: rgba(255, 255, 255, 0.8);
     }
 
-    &:hover {
-        color: #000;
+    a {
+        padding: 5px;
+        font-size: 18px;
+        color: inherit;
+        background: transparent;
+        text-decoration: none;
+        position: relative;
+        cursor: pointer;
+        transition: var(--transition);
+        overflow: hidden;
+        display: block;
 
         &:after {
-            right: 0;
+            content: "";
+            display: block;
+            position: absolute;
+            right: -100px;
+            border: 0;
+            width: 100%;
+            height: 1px;
+            background: #000;
+            transition: var(--transition);
+        }
+
+        &:hover {
+            color: #000;
+
+            &:after {
+                right: 0;
+            }
         }
     }
-}
 
-input[id="toggle-menu"]:checked~ul {
-    opacity: 1;
+    input[id="toggle-menu"]:checked~ul {
+        opacity: 1;
+    }
+
 }
 
 main {
@@ -176,74 +178,178 @@ main {
     z-index: auto;
     margin-top: var(--tablet-mobile-header-height);
 
-    * {
+    &>* {
         width: 100%;
+        padding: var(--main-padding);
+    }
+}
+
+.banner {
+    background-image: url('assets/banner.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: 500px;
+
+    h2 {
+        font-family: Red Hat Display;
+        font-size: 30px;
+        font-weight: 600;
+        line-height: 50px;
+        letter-spacing: 0.05em;
+        text-align: left;
+
+        color: #000;
+        margin-top: 40px;
+    }
+}
+
+.blog {
+
+    h1 {
+        font-family: Red Hat Display;
+        font-size: 48px;
+        font-weight: 400;
+        line-height: 64px;
+        letter-spacing: 0.05em;
+        text-align: center;
+        margin: 50px auto;
+    }
+
+    div {
+        margin-bottom: 50px;
+            h4 {
+                font-family: Lato;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 26.56px;
+                letter-spacing: 0.1em;
+                text-align: left;
+                color: inherit;
+                margin-bottom: 30px;
+            }
+
+            h2 {
+                font-family: Red Hat Display;
+                font-size: 22px;
+                font-weight: 500;
+                line-height: 36.52px;
+                letter-spacing: 0.1em;
+                text-align: left;
+                color: #000;
+                margin-bottom: 10px;
+            }
+
+            h6 {
+                font-family: Lato;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 26.56px;
+                letter-spacing: 0.1em;
+                text-align: left;
+                color: inherit;
+                margin-bottom: 40px;
+
+            }
+
+            h5 {
+                font-family: Lato;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 26.56px;
+                letter-spacing: 0.05em;
+                text-align: left;
+                color: inherit;
+                margin-bottom: 35px;
+            }
+
+        figure {
+            width: 100%;
+            position: relative;
+
+            img {
+                position: relative;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center;
+            }
+        }
+
+    }
+}
+
+
+
+
+
+
+
+
+
+footer {
+    height: var(--table-mobile-footer-height);
+    z-index: auto;
+    border: 1px solid red;
+}
+
+
+
+
+
+
+
+
+
+@media screen and (min-width: 768px) {
+    :root {
+        --main-padding: 20px 34px;
+    }
+
+    header>ul {
+        right: 0;
     }
 
     .banner {
-        background-image: url('assets/banner.png');
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-        height: 500px;
-        padding: var(--main-padding);
-
         h2 {
-            margin-top: 40px;
-            font-family: Red Hat Display;
-            color: #000;
-            font-size: 30px;
-            font-weight: 600;
-            line-height: 50px;
-            letter-spacing: 0.05em;
-            text-align: left;
+            font-size: 36px;
+            width: 80%;
+            margin-top: 0;
+
         }
     }
 
 
 }
 
-    footer {
-        height: var(--table-mobile-footer-height);
+@media screen and (min-width: 1440px) {
+    :root {
+        --main-padding: 40px 135px;
+        --tablet-mobile-header-height: 100px;
+    }
+
+    label[for="toggle-menu"] {
+        display: none;
+    }
+
+    header>ul {
+        opacity: 1;
+        position: relative;
+        height: auto;
+        margin-left: 30%;
+        right: 0;
+        top: 0;
+        transition: var(--transition);
         z-index: auto;
-        border: 1px solid red;
+        flex-direction: row;
     }
 
+    main>.banner {
+        h2 {
+            font-size: 48;
+            width: 50%;
+            margin-top: 30px;
 
-
-
-    @media screen and (min-width: 768px) {
-        :root {
-            --main-padding: 20px 34px;
-        }
-
-        header>ul {
-            right: 0;
-
-        }
-
-
-    }
-
-    @media screen and (min-width: 1440px) {
-        :root {
-            --main-padding: 40px 135px;
-            --tablet-mobile-header-height: 100px;
-        }
-
-        label[for="toggle-menu"] {
-            display: none;
-        }
-
-        header>ul {
-            opacity: 1;
-            position: relative;
-            height: auto;
-            margin-left: 30%;
-            right: 0;
-            top: 0;
-            transition: var(--transition);
-            z-index: auto;
-            flex-direction: row;
         }
     }
+}
