--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     }
 
     &:has(#show-posts-toggle:checked) {
-        --post-icon-content: "Hide";
+        --post-icon-content: "Hide Some";
         --post-display: flex;
     }
 
@@ -109,7 +109,7 @@ header {
     input[id="search-menu"]:checked~label[for="search-menu"] {
         input {
             opacity: 1;
-            width: 200px;
+            width: 100px;
             padding-left: 10px;
         }
     }
@@ -218,50 +218,57 @@ main {
 
     div {
         margin-bottom: 50px;
-            h4 {
-                font-family: Lato;
-                font-size: 16px;
-                font-weight: 400;
-                line-height: 26.56px;
-                letter-spacing: 0.1em;
-                text-align: left;
-                color: inherit;
-                margin-bottom: 30px;
-            }
 
-            h2 {
-                font-family: Red Hat Display;
-                font-size: 22px;
-                font-weight: 500;
-                line-height: 36.52px;
-                letter-spacing: 0.1em;
-                text-align: left;
-                color: #000;
-                margin-bottom: 10px;
-            }
+        article {
+            display: flex;
+            flex-direction: column;
+            align-items: start;
+        }
 
-            h6 {
-                font-family: Lato;
-                font-size: 16px;
-                font-weight: 400;
-                line-height: 26.56px;
-                letter-spacing: 0.1em;
-                text-align: left;
-                color: inherit;
-                margin-bottom: 40px;
+        h4 {
+            font-family: Lato;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 26.56px;
+            letter-spacing: 0.1em;
+            text-align: left;
+            color: inherit;
+            margin-bottom: 30px;
+        }
 
-            }
+        h2 {
+            font-family: Red Hat Display;
+            font-size: 22px;
+            font-weight: 500;
+            line-height: 36.52px;
+            letter-spacing: 0.1em;
+            text-align: left;
+            color: #000;
+            margin-bottom: 10px;
+        }
 
-            h5 {
-                font-family: Lato;
-                font-size: 16px;
-                font-weight: 400;
-                line-height: 26.56px;
-                letter-spacing: 0.05em;
-                text-align: left;
-                color: inherit;
-                margin-bottom: 35px;
-            }
+        h6 {
+            font-family: Lato;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 26.56px;
+            letter-spacing: 0.1em;
+            text-align: left;
+            color: inherit;
+            margin-bottom: 40px;
+
+        }
+
+        h5 {
+            font-family: Lato;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 26.56px;
+            letter-spacing: 0.05em;
+            text-align: left;
+            color: inherit;
+            margin-bottom: 35px;
+        }
 
         figure {
             width: 100%;
@@ -276,6 +283,101 @@ main {
             }
         }
 
+    }
+}
+
+.posts {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 30px;
+
+    label {
+        cursor: pointer;
+        width: 100%;
+        margin-bottom: 10px;
+
+        h2 {
+            font-family: Red Hat Display;
+            font-size: 28px;
+            font-weight: 600;
+            line-height: 36px;
+            letter-spacing: 0.05em;
+            text-align: left;
+        }
+
+        input {
+            display: none;
+        }
+
+        i {
+            font-size: 40px;
+
+        }
+
+        i:before {
+            content: var(--post-icon-content);
+            display: inline-block;
+            width: 90px;
+            font-family: Lato;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 26.56px;
+            letter-spacing: 0.1em;
+            text-align: left;
+
+        }
+    }
+
+    div {
+        figure {
+            margin-bottom: 50px;
+            img {
+                width: 100%;
+                height: auto;
+            }
+        }
+
+        article {
+            h4 {
+                font-family: Lato;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 26.56px;
+                letter-spacing: 0.1em;
+                color: #565656;
+                margin-bottom: 30px;
+            }
+
+            h6 {
+                font-family: Lato;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 26.56px;
+                letter-spacing: 0.1em;
+                color: #565656;
+                margin-bottom: 40px;
+            }
+
+            h3 {
+                font-family: Red Hat Display;
+                font-size: 22px;
+                font-weight: 500;
+                line-height: 36.52px;
+                letter-spacing: 0.1em;
+                color: #000;
+                margin-bottom: 10px;
+            }
+
+            h5 {
+                font-family: Lato;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 26.56px;
+                letter-spacing: 0.05em;
+                color: #565656;
+                margin-bottom: 35px;
+            }
+        }
     }
 }
 
@@ -316,6 +418,32 @@ footer {
             width: 80%;
             margin-top: 0;
 
+        }
+    }
+
+    .blog {
+        h1 {
+            text-align: left;
+        }
+
+        div {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            gap: 20px;
+        }
+
+        article {
+            flex-basis: 50%;
+        }
+
+        figure {
+            flex-basis: 50%;
+        }
+
+        &>div:nth-child(odd) {
+            flex-direction: row-reverse;
         }
     }
 
