--- a/style.css
+++ b/style.css
@@ -331,9 +331,10 @@ main {
     div {
         figure {
             margin-bottom: 50px;
+
             img {
                 width: 100%;
-                height: auto;
+                height: 100%;
             }
         }
 
@@ -345,7 +346,7 @@ main {
                 line-height: 26.56px;
                 letter-spacing: 0.1em;
                 color: #565656;
-                margin-bottom: 30px;
+                margin-bottom: git add .30px;
             }
 
             h6 {
@@ -447,6 +448,46 @@ footer {
         }
     }
 
+    .posts {
+        div {
+            display: flex;
+            flex-direction: row;
+            gap: 20px;
+
+            &>* {
+                flex-basis: 50%;
+            }
+
+            &:nth-child(odd) {
+                flex-direction: row-reverse;
+                display: var(--post-display);
+            }
+        }
+
+        article {
+            display: grid;
+            margin : 0;
+            grid-template-areas: "h4 h6"
+                "h3 h3"
+                "h5 h5";
+                h4{
+                    grid-area: h4;
+                    text-align: left;
+
+                }
+                h6{
+                    grid-area: h6;
+                    text-align: right;
+                }
+                h3{
+                    grid-area: h3;
+                }
+                h5{
+                    grid-area: h5;
+
+                }
+        }
+    }
 
 }
 
@@ -478,6 +519,38 @@ footer {
             width: 50%;
             margin-top: 30px;
 
+        }
+    }
+
+    main .posts {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+
+        label {
+            width: 100%;
+        }
+
+        div {
+            display: flex;
+
+            flex-direction: column !important;
+            gap: 30px;
+            flex-basis: 30%;
+
+            &:nth-child(odd) {
+                flex-direction: row;
+            }
+
+            article {
+                h5 {
+                    margin-top: auto;
+                }
+            }
+
+            figure {
+                margin: 0;
+            }
         }
     }
 }
