--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
     --main-padding: 23px 10px;
     --post-icon-content: "View All";
     --post-display: none;
+    --popular-icon-content: "View All";
+    --popular-display: none;
 
     &:has(#toggle-menu:checked) {
         --position-top: var(--tablet-mobile-header-height)
@@ -20,6 +22,11 @@
     &:has(#show-posts-toggle:checked) {
         --post-icon-content: "Hide Some";
         --post-display: flex;
+    }
+
+    &:has(#show-popular-toggle:checked) {
+        --popular-icon-content: "Hide Some";
+        --popular-display: flex;
     }
 
     ;
@@ -289,7 +296,6 @@ main {
 .posts {
     display: flex;
     flex-direction: column;
-    margin-bottom: 30px;
 
     label {
         cursor: pointer;
@@ -303,6 +309,7 @@ main {
             line-height: 36px;
             letter-spacing: 0.05em;
             text-align: left;
+            color: #000;
         }
 
         input {
@@ -382,7 +389,165 @@ main {
     }
 }
 
+.popular {
+    display: flex;
+    flex-direction: column;
 
+    label {
+        cursor: pointer;
+        width: 100%;
+        margin-bottom: 10px;
+
+        h2 {
+            font-family: Red Hat Display;
+            font-size: 28px;
+            font-weight: 600;
+            line-height: 36px;
+            letter-spacing: 0.05em;
+            text-align: left;
+            color: #000;
+        }
+
+        input {
+            display: none;
+        }
+
+        i {
+            font-size: 40px;
+
+        }
+
+        i:before {
+            content: var(--popular-icon-content);
+            display: inline-block;
+            width: 90px;
+            font-family: Lato;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 26.56px;
+            letter-spacing: 0.1em;
+            text-align: left;
+
+        }
+    }
+
+    ul {
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        gap: 20px;
+        margin-bottom: 50px;
+
+        li {
+            width: 100%;
+            margin-bottom: 50px;
+            display: flex;
+            flex-direction: column;
+
+            &:nth-child(n+3) {
+                display: var(--popular-display);
+            }
+
+            figure {
+                margin-bottom: 20px;
+                width: 100%;
+
+                img {
+                    width: 100%;
+                    height: auto;
+                }
+            }
+
+            span {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: space-between;
+
+                font-family: Lato;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 26.56px;
+                letter-spacing: 0.1em;
+                color: #7b7b7b;
+                margin-bottom: 25px;
+
+            }
+
+            h4 {
+                font-family: Red Hat Display;
+                font-size: 22px;
+                font-weight: 600;
+                line-height: 36.52px;
+                letter-spacing: 0.1em;
+                color: #000;
+                margin-bottom: 10px;
+            }
+
+            p {
+                font-family: Lato;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 26.56px;
+                letter-spacing: 0.05em;
+                margin-bottom: 20px;
+                ;
+            }
+        }
+    }
+
+    button {
+        padding: 10px 45px;
+        border: none;
+        outline: none;
+        min-width: 180px;
+        background: #565656;
+        user-select: none;
+        margin: 0 auto;
+
+        font-family: Lato;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 26.56px;
+        letter-spacing: 0.1em;
+        color: #fff;
+        cursor: pointer;
+        margin-bottom: 70px;
+        transition: var(--transition);
+
+        &:hover {
+            background: #000;
+        }
+    }
+
+    h4 {
+        font-family: Red Hat Display;
+        font-size: 24px;
+        font-weight: 400;
+        line-height: 39.84px;
+        letter-spacing: 0.1em;
+        color: #000;
+        margin-bottom: 35px;
+
+        i {
+            display: block;
+        }
+    }
+
+    p {
+        font-family: Lato;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 32px;
+        letter-spacing: 0.05em;
+        text-align: left;
+        color: #565656;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+}
 
 
 
@@ -466,27 +631,48 @@ footer {
 
         article {
             display: grid;
-            margin : 0;
+            margin: 0;
             grid-template-areas: "h4 h6"
                 "h3 h3"
                 "h5 h5";
-                h4{
-                    grid-area: h4;
-                    text-align: left;
 
-                }
-                h6{
-                    grid-area: h6;
-                    text-align: right;
-                }
-                h3{
-                    grid-area: h3;
-                }
-                h5{
-                    grid-area: h5;
+            h4 {
+                grid-area: h4;
+                text-align: left;
 
-                }
+            }
+
+            h6 {
+                grid-area: h6;
+                text-align: right;
+            }
+
+            h3 {
+                grid-area: h3;
+            }
+
+            h5 {
+                grid-area: h5;
+
+            }
         }
+    }
+
+    .popular {
+        ul {
+            flex-direction: row;
+            justify-content: space-between;
+
+            li {
+                flex-basis: calc(50% - 20px/2);
+                margin-bottom: 0;
+            }
+        }
+        article>p{
+            span{
+                text-align: right;
+            }
+            }
     }
 
 }
@@ -551,6 +737,11 @@ footer {
             figure {
                 margin: 0;
             }
+        }
+    }
+    .popular{
+        &>article{
+            display: flex;
         }
     }
 }
