--- a/style.css
+++ b/style.css
@@ -549,16 +549,83 @@ main {
     }
 }
 
-
-
-
-
-
-
 footer {
     height: var(--table-mobile-footer-height);
-    z-index: auto;
-    border: 1px solid red;
+    padding: var(--main-padding);
+
+    h2 {
+        font-family: Red Hat Display;
+        font-size: 32px;
+        font-weight: 400;
+        line-height: 42.34px;
+        letter-spacing: 0.05em;
+        text-align: center;
+        color: #000;
+        margin-bottom: 20px;
+    }
+
+    a {
+        font-family: Lato;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 29.88px;
+        letter-spacing: 0.1em;
+        text-align: center;
+        color: #565656;
+        text-decoration: none;
+        display: block;
+        margin-bottom: 20px;
+
+        &:hover {
+            color: #000;
+        }
+    }
+
+    ul {
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+        list-style: none;
+        margin-bottom: 40px;
+
+        li {
+            width: 50px;
+            height: 50px;
+            border: solid 1px #565656;
+
+            a {
+                margin: 0;
+                width: 100%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                svg {
+                    fill: #565656;
+                }
+
+                &:hover {
+                    background: #565656;
+
+                    svg {
+                        fill: #fff;
+                    }
+                }
+            }
+        }
+    }
+
+
+    h4 {
+        font-family: Lato;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 26.56px;
+        letter-spacing: 0.1em;
+        text-align: center;
+        color: #000;
+    }
 }
 
 
@@ -668,19 +735,20 @@ footer {
                 margin-bottom: 0;
             }
         }
-        article>p{
-            span{
+
+        article>p {
+            span {
                 text-align: right;
             }
-            }
+        }
     }
-
 }
 
 @media screen and (min-width: 1440px) {
     :root {
         --main-padding: 40px 135px;
         --tablet-mobile-header-height: 100px;
+        --table-mobile-footer-height: 300px;
     }
 
     label[for="toggle-menu"] {
@@ -739,9 +807,42 @@ footer {
             }
         }
     }
-    .popular{
-        &>article{
+
+    .popular {
+        &>article {
             display: flex;
+        }
+    }
+
+    footer {
+        display: grid;
+        grid-template-areas: "h2 . . ."
+            "tel . . ul"
+            "email . . ul"
+            "h4 h4 h4 h4";
+
+        * {
+            margin: 0 !important;
+        }
+
+        h2 {
+            grid-area: h2;
+        }
+
+        .tel {
+            grid-area: tel;
+        }
+
+        .email {
+            grid-area: email;
+        }
+
+        ul {
+            grid-area: ul;
+        }
+
+        h4 {
+            grid-area: h4;
         }
     }
 }
